[package]
name = "byteorder-core2"
version = "1.5.0-core2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Personal fork based on byteorder PR 184 that adds some core2 support to byteorder "
repository = "https://github.com/vinceTheProgrammer/byteorder-core2"
readme = "README.md"
categories = ["encoding", "parsing", "no-std"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.60"

[lib]
name = "byteorder"
bench = false

[dependencies.core2]
default-features = false
features = ["nightly", "alloc"]
version = "0.4.0"

[dev-dependencies]
quickcheck = { version = "0.9.2", default-features = false }
rand = "0.7"

[features]
default = ["std"]
std = []

# This feature is no longer used and is DEPRECATED. This crate now
# automatically enables i128 support for Rust compilers that support it. The
# feature will be removed if and when a new major version is released.
i128 = []

[profile.bench]
opt-level = 3
